--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
     <h2>Umów wizytę</h2>
     <div class="widget">
-      <div class="calendly-inline-widget" data-url="https://calendly.com/twoj-kalendarz" style="min-width:320px;height:630px;"></div>
+      <div class="calendly-inline-widget" data-url="https://calendly.com/bil-jaroslaw/sesja-stacjonarna-50min" style="min-width:320px;height:630px;"></div>
       <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
     </div>
 
