--- a/index.html
+++ b/index.html
@@ -55,9 +55,11 @@
 
     <h2>Umów wizytę</h2>
     <div class="widget">
-      <div class="calendly-inline-widget" data-url="https://calendly.com/bil-jaroslaw/sesja-stacjonarna-50min" style="min-width:320px;height:630px;"></div>
-      <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
+<div class="calendly-inline-widget" data-url="https://calendly.com/bil-jaroslaw/sesja-stacjonarna-50min?background_color=f1a8a8&text_color=a600b1&primary_color=ffffff" style="min-width:320px;height:700px;"></div>
+<script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
     </div>
+
+
 
     <h2>Polityka prywatności</h2>
     <p>Szanuję Twoją prywatność. Dane osobowe przetwarzane są zgodnie z obowiązującymi przepisami RODO wyłącznie w celu realizacji usług psychoterapeutycznych oraz kontaktu z pacjentem. Wszelkie informacje przekazane podczas terapii są poufne.</p>
