--- a/index.html
+++ b/index.html
@@ -48,15 +48,10 @@
     <h2>O gabinecie</h2>
     <p>Zapraszam na psychoterapię indywidualną w komfortowej i bezpiecznej przestrzeni. Pracuję w elastycznych godzinach – możesz zarezerwować termin online.</p>
 
-    <h2>Usługi</h2>
-    <ul>
-      <li>Psychoterapia indywidualna</li>
-    </ul>
-
-    <h2>Umów wizytę</h2>
+    <h2>Umów się na wizytę</h2>
     <div class="widget">
-<div class="calendly-inline-widget" data-url="https://calendly.com/bil-jaroslaw/sesja-stacjonarna-50min?background_color=f1a8a8&text_color=a600b1&primary_color=ffffff" style="min-width:320px;height:700px;"></div>
-<script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
+      <div class="calendly-inline-widget" data-url="https://calendly.com/bil-jaroslaw/sesja-stacjonarna-50min?background_color=f1a8a8&text_color=a600b1&primary_color=ffffff" style="min-width:320px;height:700px;"></div>
+      <script type="text/javascript" src="https://assets.calendly.com/assets/external/widget.js" async></script>
     </div>
 
 
