--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 </head>
 <body>
   <header>
-    <h1>Porządek w Haosie</h1>
+    <h1>Porządek w Chaosie</h1>
     <p>Gabinet Psychoterapii</p>
   </header>
 
@@ -61,7 +61,7 @@
   </section>
 
   <footer>
-    <p>&copy; 2025 Porządek w Haosie – Gabinet Psychoterapii</p>
+    <p>&copy; 2025 Porządek w Chaosie – Gabinet Psychoterapii</p>
   </footer>
 </body>
 </html>
