--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     }
     
     header {
-      background: rgba(107, 114, 128, 0.85); /* półprzezroczyste ciemne tło */
+      background: #5a3e7b;
       color: white;
       padding: 2rem 1rem;
       text-align: center;
